# p3dx

./: .gitignore  README.md  cover_2.py  coverage_README.md  install_dependecies.bash
.github/scripts/: test_nav.py
.github/workflows/: ci.yml
p3dx_control/: CMakeLists.txt  package.xml
p3dx_control/config/: control.yaml  localization.yaml  twist_mux.yaml
p3dx_control/launch/: control.launch  control_wo_ns.launch
p3dx_description/: CMakeLists.txt  package.xml
p3dx_description/launch/: description.launch  description.launch.py  multi_robot_scenario.launch  pioneer3dx.gazebo.launch  pioneer3dx.urdf.launch
p3dx_description/urdf/camera/: camera.xacro
p3dx_description/urdf/camera_rgbd/: camera_rgbd.xacro
p3dx_description/urdf/imu/: imu.xacro
p3dx_description/urdf/laser/: hokuyo.xacro  hokuyo_gpu.xacro
p3dx_description/urdf/p3dx/: pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_chassis.xacro  pioneer3dx_plugins.xacro  pioneer3dx_sonar.xacro  pioneer3dx_swivel.xacro  pioneer3dx_wheel.xacro
p3dx_gazebo/: CMakeLists.txt  package.xml
p3dx_gazebo/launch/: empty_world.launch.py  multi_p3dx_empty_world.launch  multi_p3dx_warehouse_world.launch.py  p3dx_empty_world.launch  p3dx_empty_world.launch.py  p3dx_empty_world_wo_ns.launch  p3dx_playpen.launch  p3dx_template_world.launch  p3dx_warehouse_world.launch.py  spawn_p3dx.launch  spawn_p3dx.launch.py  spawn_p3dx_wo_ns.launch  warehouse_world.launch.py
p3dx_gazebo/maps/: warehouse_world.yaml
p3dx_gazebo/models/cart_model_2/: model.config  model.sdf
p3dx_gazebo/models/cart_model_2/meshes/: cart_base.dae  cart_base_collision.stl  sup_wheels.dae  wheel.dae
p3dx_gazebo/models/pallet/: model.sdf
p3dx_gazebo/models/pallet_box_mobile/: model.sdf
p3dx_gazebo/models/shelf/: model.sdf
p3dx_gazebo/models/shelf_big/: model.config  model.sdf
p3dx_gazebo/models/tugbot/: model.config  model.sdf
p3dx_gazebo/models/tugbot-charging-station/: model.config  model.sdf
p3dx_gazebo/models/tugbot-charging-station/meshes/: charging_station.dae
p3dx_gazebo/models/tugbot/meshes/base/: movai_logo.dae  tugbot_simp.dae  tugbot_simp.stl
p3dx_gazebo/models/tugbot/meshes/gripper2/: gripper2.dae  gripper_hand.stl
p3dx_gazebo/models/tugbot/meshes/light_link/: light.stl  light_led.stl
p3dx_gazebo/models/tugbot/meshes/wheel/: wheel.dae
p3dx_gazebo/scripts/: p3dx_simulator.bash
p3dx_gazebo/world/: playpen.world
p3dx_gazebo/worlds/: empty_world.sdf  warehouse_world.sdf
p3dx_navigation/: CMakeLists.txt  package.xml
p3dx_navigation/config/: nav2_params.yaml  slam_2d.yaml
p3dx_navigation/launch/: amcl.launch  amcl_demo.launch  amcl_demo.launch.py  gmapping.launch  gmapping_demo.launch  localization.launch.py  move_base.launch  move_base_flex.launch  move_base_mapless_demo.launch  navigation.launch.py  navigation_launch.py  slam_2d.launch.py  slam_2d_demo.launch.py
p3dx_navigation/maps/: mirale_gazebo.yaml  warehouse_world.pgm
p3dx_navigation/mbf_config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
p3dx_viz/: CMakeLists.txt  package.xml
p3dx_viz/launch/: view_model.launch  view_model.launch.py  view_robot.launch  view_robot.launch.py
p3dx_viz/rviz/: model.rviz  robot.rviz
p3dx_viz/rviz2/: model.rviz  nav2_view.rviz  pioneer_a_nav.rviz  robot.rviz
