<?xml version="1.0"?>
<package>
  <name>p3dx_control</name>
  <version>0.0.1</version>
  <description>p3dx controller configurations</description>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>

  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/p3dx_control</url> -->
  <!-- <url type="bugtracker">https://github.com/p3dx/p3dx/issues</url> -->
  <!-- <url type="repository">https://github.com/p3dx/p3dx</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>p3dx_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>