<?xml version="1.0"?>
<package format="2">
  <name>p3dx_description</name>
  <version>2.0.0</version>
  <description>p3dx model for Gazebo and ROS environment</description>

  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/brucechanjianle/p3dx</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
