<?xml version="1.0"?>
<package>
  <name>p3dx_gazebo</name>
  <version>0.0.1</version>
  <description>p3dx Gazebo world</description>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>

  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/</url>
  <url type="bugtracker">https://github.com/</url>
  <url type="repository">https://github.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>p3dx_control</run_depend>
  <run_depend>p3dx_description</run_depend>
  <run_depend>multimaster_launch</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>

</package>
