<?xml version="1.0"?>
<package>
  <name>p3dx_gazebo</name>
  <version>2.0.0</version>
  <description>p3dx Gazebo world</description>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>
  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>

  <url type="website">github.com/brucechanjianle/p3dx</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gz_ros gz_sim_resource_path_path="${prefix}/models"/>
  </export>

</package>
