<?xml version="1.0"?>
<package format="2">
  <name>p3dx_gazebo</name>
  <version>2.0.0</version>
  <description>p3dx Gazebo world</description>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>
  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>
  <url type="website">github.com/brucechanjianle/p3dx</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>p3dx_description</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
