<?xml version="1.0"?>
<package>
  <name>p3dx_viz</name>
  <version>2.0.0</version>
  <description>Visualization configuration for p3dx</description>

  <author email="jianle001@e.ntu.edu.sg">brucechanjianle</author>
  <maintainer email="jianle001@e.ntu.edu.sg">brucechanjianle</maintainer>

  <license>MIT</license>
  <url type="website">github.com/brucechanjianle/p3dx</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend>p3dx_description</run_depend>
  <run_depend>rviz2</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
